app/styles/region-detail.scss
@import 'global';

.region-detail {
    background-color: white;
    color: black;

    .download-div {
      display: table;
      text-align: right;

      button {
        display: block;
        margin-bottom: 5px;
      }
    }

    &.eez {
        .metrics {
            min-height: 220px;
        }
    }
    &.lme {
        .metrics {
            min-height: 165px;
        }
    }

    .btn {
      border-radius: 0;
      background-color: $lightBlue;
    }
    div.row {
        margin-bottom: 10px;
        margin-left: 70px;
        margin-right: 70px;
    }
    .title.row {
        margin-top: 30px;
    }
    div.content {
        background-color: white;
        color: black;
        border: 1px solid $gray;
        margin-bottom: 30px;
    }
    .padded {
        padding: 20px;
    }
    .metrics table {
        width: 100%;
        td {
            padding: 2px;
        }
    }
    .region-title {
        min-height: 40px;
        margin-top: 8px;
        text-transform: uppercase;
    }
    .hover-region {
        margin: 0px;
    }
    .tabset {
        margin-left:17px;
        .tab-content {
            border: 1px solid $gray;
        }
        ul.nav-tabs {

            li {
                background-color:white;
                color: black;
                margin-left: 5px;
                font-weight: bolder;
            }
            :first-child {
                margin-left: 0px;
            }
        }

        .container {
            padding-top: 40px;
            background-color: white;
        }
    }
    .tab-pane {
        .ui-select-container {
            span.btn {
                background-color: transparent !important;
            }
        }
        .container {
           padding: 20px;
        }
    }
    .map-cells {
        padding: 0px;
    }
    .container {
        padding: 20px 70px;
        width: 100%;
    }
    .right {
        padding-right: 0px;
    }

}
.eez .chart-container {
    .header-links {
       margin-top:-10px;
       line-height: 1.2em;
    }
}
.chart-container {
    height: 350px;
    position: relative;

    &.no-data {
      text-align: center;
      font-size: 1.5em;

      p {
        margin: 0;
        padding: 3em 0 0 0;
      }
    }

    /* make points visible */
    .nvd3.nv-line .nv-point
    {
        fill-opacity: 1 !important;
    }

    .form-group {
        margin-right: 16px;
        margin-bottom: 12px;
    }

    .form-control {
        color: #555;
      padding: 0;
    }

    label {
        margin-right: 6px;
    }

    .header-links {
        span {
            padding-left: 16px;
            cursor: pointer;
        }
    }

    .fa.loading {
      display: none;
    }

    &:before {
        position: absolute;
        text-align: center;
        color: #333333;
        font-size: 1.75em;
        background-color: rgba(255,255,255,0);
        width: 100%;
        height: 100%;
        padding-top: 170px;
    }

    &.loading {
      .fa.loading {
        z-index: 1;
        display: inline-block;
        position: absolute;
        left: 48%;
        top: 40%;
      }

      &:before {
        content: '';
        background-color: white;
      }
    }
}
.nvd3.nv-stackedarea path.nv-area {
    fill-opacity: 1.0;
}

.region-detail-tabs {
  .nav-tabs > li > a {
    color: $textColor;
    background-color: $lightGray;
    margin-right: 0;
    border: 1px solid $gray;
    border-bottom: 0px;
    border-radius: 0px;
  }

  .nav-tabs > li.active > a,
  .nav-tabs > li.active > a:hover,
  .nav-tabs > li.active > a:focus {
    border-color: transparent;
    background: $lightBlue;
    color: white;
  }

  .catch {
    .col-sm-7 {
        padding: 0px;
    }
    h3.values-by {
        margin-top: 35px;
    }
  }

  .biodiversity {
    &>div {
        padding: 0px;
    }
    ul.organisms {
      list-style-type: none;
      padding-left: 5px;
    }
  }
}

i.fa.red {
  color: red;
}

